<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <utils.view.FarsiTextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/passDialogMessage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/PleaseEnterPassword"/>
    <utils.view.FarsiEditText android:layout_gravity="center" android:id="@+id/input_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:minWidth="300dp" android:hint="@string/PasscodePassword" android:inputType="textPassword"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <utils.view.FarsiTextView android:textColor="@color/green" android:id="@+id/tvOk" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OK2"/>
        <utils.view.FarsiTextView android:textColor="@color/green" android:id="@+id/tvCancel" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/Cancel"/>
    </LinearLayout>
</LinearLayout>
