<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/iv_back" android:padding="3dp" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginLeft="10dp" android:src="@drawable/ic_ab_back" android:layout_alignParentLeft="true"/>
            <utils.view.FarsiTextView android:textSize="12sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="ثبت نام در سامانه پرداخت" android:layout_toRightOf="@+id/iv_back" android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView android:background="@color/profile_bg" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <utils.view.TitleTextView android:textSize="12sp" android:textColor="@color/message_item_color" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginRight="3dp" android:layout_marginBottom="4dp" android:text="اطلاعات شخصی"/>
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:weightSum="100">
                    <android.support.design.widget.TextInputLayout android:id="@+id/til_first_name" android:layout_width="0dp" android:layout_height="match_parent" android:layout_margin="3dp" android:layout_weight="50">
                        <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_first_name" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/FirstName" android:maxLines="1" android:maxLength="30" android:digits="@string/alphabet" android:inputType="textPersonName" android:imeOptions="actionNext"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout android:id="@+id/til_last_name" android:layout_width="0dp" android:layout_height="match_parent" android:layout_margin="3dp" android:layout_weight="50">
                        <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_last_name" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/LastName" android:maxLines="1" android:maxLength="35" android:digits="@string/alphabet" android:inputType="textPersonName" android:imeOptions="actionNext"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_password" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_password" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/password" android:maxLines="1" android:maxLength="30" android:inputType="textPassword" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_password_conf" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_password_conf" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/password_conf" android:maxLines="1" android:maxLength="30" android:inputType="textPassword" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <utils.view.TitleTextView android:textSize="12sp" android:textColor="@color/message_item_color" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginRight="3dp" android:layout_marginBottom="4dp" android:text="اطلاعات آدرس"/>
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout android:id="@+id/til_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_desc" android:padding="5dp" android:layout_width="match_parent" android:layout_height="80dp" android:hint="@string/desc" android:maxLines="3" android:inputType="text" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_address" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_address" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/address" android:maxLines="1" android:maxLength="100" android:inputType="text" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_national_code" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_national_code" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/national_code" android:maxLines="1" android:inputType="number" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <utils.view.TitleTextView android:textSize="12sp" android:textColor="@color/message_item_color" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginRight="3dp" android:layout_marginBottom="4dp" android:text="اطلاعات بانک"/>
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp">
                    <utils.view.TitleTextView android:textSize="12sp" android:textColor="@color/black" android:layout_gravity="right" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/select_bank"/>
                    <LinearLayout android:orientation="horizontal" android:background="@drawable/border_cluster" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="100">
                        <ImageView android:layout_gravity="center" android:background="@color/gray" android:padding="10dp" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/arrow_down"/>
                        <org.telegram.customization.util.MaterialSpinner android:id="@+id/sp_activity_group" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="100" app:ms_thickness="0dp" app:ms_arrowSize="0dp" app:ms_paddingInt="0" app:ms_arrowColor="@android:color/transparent" app:ms_enableFloatingLabel="false" app:ms_isRtl="true"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@+id/ll_Act_type" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_card_no" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_card_no" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/cart_number" android:maxLines="1" android:maxLength="20" android:inputType="number" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout android:id="@+id/til_shaba" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="3dp" android:layout_marginRight="10dp">
                    <utils.view.FarsiEditText android:textSize="14sp" android:textColorHint="@color/gray" android:id="@+id/fet_shaba" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/shaba" android:maxLines="1" android:inputType="textCapCharacters" android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="1dp"/>
            <utils.view.FarsiButton android:theme="@style/ButtonBlue" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/ftv_register" android:paddingLeft="80dp" android:paddingRight="80dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/Register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
